--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ["https://www.buymeacoffee.com/dwolf", "https://www.paypal.me/devidwolf"]
+custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf"]
