--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,4 +1,8 @@
+# community_bridge:
+# github:
 issuehunt: devidwolf
 ko_fi: dwolf
 liberapay: dwolf
+# open_collective: 
+otechie: wolf
 custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf"]
