--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -5,4 +5,6 @@ ko_fi: dwolf
 liberapay: dwolf
 # open_collective: 
 otechie: wolf
+# patreon:
+# tidelift:
 custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf"]
