--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -5,6 +5,6 @@ ko_fi: dwolf
 liberapay: dwolf
 # open_collective: 
 otechie: wolf
-# patreon:
+patreon: devidwolf
 # tidelift:
 custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf"]
