--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -7,4 +7,4 @@ liberapay: dwolf
 otechie: wolf
 patreon: devidwolf
 # tidelift:
-custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf", "payhip.com/wolfgdn"]
+custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf", "store.wolf.gdn"]
