--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,10 +1,10 @@
 # community_bridge:
 # github:
 issuehunt: devidwolf
-ko_fi: dwolf
-liberapay: dwolf
+# ko_fi: dwolf
+# liberapay: dwolf
 # open_collective: 
-otechie: wolf
-patreon: devidwolf
+# otechie: wolf
+# patreon: devidwolf
 # tidelift:
 custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf", "store.wolf.gdn"]
