--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,10 +1,11 @@
 # community_bridge:
 # github:
-issuehunt: devidwolf
+# issuehunt: devidwolf
 # ko_fi: dwolf
 # liberapay: dwolf
 # open_collective: 
 # otechie: wolf
 # patreon: devidwolf
 # tidelift:
-custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf", "store.wolf.gdn"]
+# custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf", "store.wolf.gdn"]
+custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf",]
