--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -7,5 +7,8 @@
 # otechie: wolf
 # patreon: devidwolf
 # tidelift:
-# custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf", "store.wolf.gdn"]
-custom: ["buymeacoffee.com/dwolf", "paypal.me/devidwolf",]
+custom:
+  - 'buymeacoffee.com/dwolf
+  - 'paypal.me/devidwolf'
+  - 'bitcoin:3LqkazbPsnvDCZEvtnQLF5EYaxVwHrkASR'
+  # - ''
