--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -7,4 +7,4 @@
 # otechie: wolf
 # patreon: devidwolf
 # tidelift:
-custom: ['buymeacoffee.com/dwolf', 'paypal.me/devidwolf',]
+custom: ['https://buymeacoffee.com/dwolf', 'https://paypal.me/devidwolf',]
