--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -7,4 +7,4 @@ github: devidw
 # otechie: wolf
 # patreon: devidwolf
 # tidelift:
-custom: ['https://buymeacoffee.com/dwolf', 'https://paypal.me/devidwolf',]
+# custom: ['https://buymeacoffee.com/dwolf', 'https://paypal.me/devidwolf',]
